annoying vertical spacing bug resolved

--- a/less/mainmenu.less
+++ b/less/mainmenu.less
@@ -4,6 +4,8 @@
 // # Mobile-first directives
 // #########################
 
+@cMenu: white;
+@cMenuText: #AEAEAE;
 @cMenuHover: #D4312E;
 @cMenuHoverText: #FFFFFF;
 
@@ -18,13 +20,10 @@
 .header-wrapper {
   margin-bottom: 0;
   border: none;
-  > .container {
-    padding: 0;
-  }
 }
 
 .navbar-header {
-  padding: 0 0 0 15px;
+  padding-left: 15px;
   .navbar-brand {
     height: auto;
   }
@@ -39,23 +38,18 @@
 }
 
 .navbar-right {
-  padding-right: 0;
+  margin: 0;
   .navbar-nav {
     margin: 0;
     // menu items
     li {
       a {
         padding: 10px 20px;
-        color: #AEAEAE;
-        background-color: #FFFFFF;
+        color: @cMenuText;
+        background-color: @cMenu;
         font-size: 15px;
         font-weight: 700;
         text-transform: uppercase;
-      }
-    }
-    li:last-child {
-      a {
-        border-right: 1px solid #E1E1E1;
       }
     }
     
@@ -81,14 +75,14 @@
 
 /* Extra-small devices (smartphones, 767px and less) */
 @media (max-width: @screen-xs-max) {
-  // remove annoying horizontal spacing
-  .navbar > .container {
-    overflow: hidden;
+  // disable padding in navigation bar
+  .header-wrapper {
+    .navbar-header,
+    .navbar-right {
+      padding: 0;
+    } 
   }
-  // horizontal padding to screen
-  .navbar-header {
-    padding: 0 15px;
-  }
+  
   // full-width submenus
   .navbar .navbar-right {
     a {
@@ -128,22 +122,39 @@
       }
     }
   }
+  // bold active menu items
+  .navbar .navbar-right .navbar-nav .active:not(.current) > a {
+    color: #333;
+    background-color: @cMenu;
+    border-color: none;
+    text-decoration: none;
+    // revert Bootstrap override
+    &:hover,
+    &:focus {
+      color: @cMenuHoverText;
+      background-color: @cMenuHover;
+      border-color: @cMenuHover;
+      text-decoration: none;
+    }
+  }
   // limit logo height
   .navbar img {
     max-height: 60px;
   }
-  // menu button (h:35)
+  // menu button (h:17)
   .navbar .navbar-toggle {
     .ease();
     .rounded(0);
-    margin: 20px;
+    padding: 15px;
+    margin: 21px 15px;
     background: transparent;
     border: none;
     .icon-bar {
       .ease();
-      .rounded(3px);
+      .rounded(0);
       width: 28px;
       height: 3px;
+      background-color: @cBase;
     }
     &:hover,
     &:focus {
@@ -180,6 +191,11 @@
       a {
         padding: 47px 20px 46px;
         border-left: 1px solid #E1E1E1;
+      }
+    }
+    li:last-child {
+      a {
+        border-right: 1px solid #E1E1E1;
       }
     }
     // submenu indicator
